<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2010 NRV - nherve75@gmail.com
 * 
 * This file is part of TA.ndroid.
 * 
 * TA.ndroid is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 3 as published by
 * the Free Software Foundation.
 * 
 * TA.ndroid is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with TA.ndroid. If not, see http://www.gnu.org/licenses/
 * 
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/addfriend" android:title="@string/mng_add_friend" />
	<item android:id="@+id/addclan" android:title="@string/mng_add_clan" />
	<item android:id="@+id/clearfriends" android:title="@string/mng_clear" />
</menu>